in the middle of a mess!

--- a/interface/index.html
+++ b/interface/index.html
@@ -3,13 +3,16 @@
 <head>
    <title>Tracking Summary</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="home.css">
+   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 <header class="width-full">
    <div class="row-flex center">
       <div id="header-title">Human and Robot Interaction Laboratory</div>
+   </div>
+   <div style="margin-right: 50px;">
+      <img src="icon_white.png" alt="TAARLAB" style="height: 50px;">
    </div>
 </header>
 <div class="width-full row-flex">
@@ -40,5 +43,5 @@
 </div>
 </body>
 <script src="data.js"></script>
-<script src="home.js"></script>
+<script src="index.js"></script>
 </html>
